--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="/assets/css/responsive.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0-beta2/css/all.min.css" integrity="sha384-oYxyXD5HF9Ks5V0Of8cO5z8dcwWKe7/xwUPgn8FvVqIDtiD0doFtFviB/yauR0zZ" crossorigin="anonymous">
 
      
